--- a/app/src/main/res/layout/fragment_buyer_order_history.xml
+++ b/app/src/main/res/layout/fragment_buyer_order_history.xml
@@ -11,5 +11,14 @@
         android:id="@+id/fragmentBuyerOrderHistoryRecyclerView"
         />
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragmentOrderHistoryProgressBar"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="24dp"
+
+        />
 
 </RelativeLayout>
