--- a/app/src/main/res/layout/fragment_more_slider_items.xml
+++ b/app/src/main/res/layout/fragment_more_slider_items.xml
@@ -15,7 +15,9 @@
             android:id="@+id/moreSliderItemsFragmentProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="24dp"
         />
 
 </RelativeLayout>
