--- a/app/src/main/res/layout/fragment_see_all_latest_items.xml
+++ b/app/src/main/res/layout/fragment_see_all_latest_items.xml
@@ -10,6 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
-
+    <ProgressBar
+        android:id="@+id/moreSeeAllLatestFragmentProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="24dp"
+        />
 
 </RelativeLayout>
