--- a/app/src/main/res/layout/fragment_completed_orders.xml
+++ b/app/src/main/res/layout/fragment_completed_orders.xml
@@ -12,4 +12,14 @@
         />
 
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragmentCompletedOrdersProgressBar"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="24dp"
+
+        />
+
 </RelativeLayout>
