--- a/app/src/main/res/layout/fragment_order_details_for_buyer.xml
+++ b/app/src/main/res/layout/fragment_order_details_for_buyer.xml
@@ -14,11 +14,26 @@
         android:layout_marginBottom="36dp"
         android:indeterminateTint="@color/colorPrimary"
         />
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
-    >
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragmentOrderDetailsForBuyerCancelOrderButton"
+        android:text="@string/cancel_order"
+        android:background="@drawable/small_button_bg"
+        android:textColor="@color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="36dp"
+        android:textAllCaps="false"
+        android:visibility="gone"
+        />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true">
     <LinearLayout
         android:id="@+id/fragmentOrderDetailsForBuyerDetailsLayout"
         android:layout_width="match_parent"
