--- a/app/src/main/res/navigation/base_nav.xml
+++ b/app/src/main/res/navigation/base_nav.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/base_nav"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/launchingScreenFragment">
+
+
 
     <fragment
         android:id="@+id/logInFragment"
@@ -137,7 +139,7 @@
         <action
             android:id="@+id/action_homeFragment_self"
             app:destination="@id/homeFragment" />
-    </fragment>
+           </fragment>
     <fragment
         android:id="@+id/cartFragment"
         android:name="com.example.farmersecom.features.cart.presentation.cart.CartFragment"
@@ -432,6 +434,19 @@
         <action
             android:id="@+id/action_editPostFragment_to_communityContributionsFragment"
             app:destination="@id/communityContributionsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/launchingScreenFragment"
+        android:name="com.example.farmersecom.features.launchingScreen.LaunchingScreenFragment"
+        android:label="launching Screen"
+        tools:layout="@layout/fragment_launching_screen" >
+        <action
+            android:id="@+id/action_launchingScreenFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/base_nav"
+            app:popUpToInclusive="true"
+            />
     </fragment>
 
 
