--- a/app/src/main/res/layout/fragment_order_details_for_seller.xml
+++ b/app/src/main/res/layout/fragment_order_details_for_seller.xml
@@ -325,10 +325,11 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="24dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/wide_button"
         android:text="@string/status"
         android:textAllCaps="false"
         android:textColor="@color/white"
+        android:layout_marginEnd="8dp"
         android:visibility="gone"
         />
 
