--- a/app/src/main/res/layout/fragment_add_new_product.xml
+++ b/app/src/main/res/layout/fragment_add_new_product.xml
@@ -182,12 +182,12 @@
             android:id="@+id/buttonAddProductFragSubmit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Submit"
+            android:text="@string/submit"
             android:textAllCaps="false"
             android:layout_gravity="center"
             android:textColor="@color/white"
             android:textSize="18sp"
-            android:background="@drawable/button_bg"
+            android:background="@drawable/wide_button"
         />
 
         <ProgressBar
