--- a/app/src/main/res/layout/fragment_filters.xml
+++ b/app/src/main/res/layout/fragment_filters.xml
@@ -11,15 +11,15 @@
         android:id="@+id/fragmentFilterFragmentClearFilterTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/clear_filters"
-        app:drawableTopCompat="@drawable/ic_baseline_clear_24"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimary"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="8dp"
+        android:text="@string/clear_filters"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        app:drawableTint="@color/colorPrimary"
 
 
-        app:drawableTint="@color/colorPrimary" />
+        app:drawableTopCompat="@drawable/ic_baseline_clear_24" />
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
