--- a/app/src/main/res/layout/layout_cart_item_view.xml
+++ b/app/src/main/res/layout/layout_cart_item_view.xml
@@ -72,7 +72,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_toEndOf="@id/imageViewLayoutCartItemProductImage"
-            android:text="Unit"
+            android:text="@string/unit_in_details"
             android:textSize="16sp" />
 
         <TextView
