--- a/app/src/main/res/navigation/base_nav.xml
+++ b/app/src/main/res/navigation/base_nav.xml
@@ -148,6 +148,13 @@
         <action
             android:id="@+id/action_cartFragment_to_cartCheckOutFragment"
             app:destination="@id/cartCheckOutFragment" />
+        <action
+            android:id="@+id/action_cartFragment_to_logInFragment"
+            app:destination="@id/logInFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/base_nav"
+            app:popUpToInclusive="true"
+            />
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
@@ -298,7 +305,11 @@
         android:id="@+id/orderDetailsForBuyerFragment"
         android:name="com.example.farmersecom.features.buyerSection.presentation.orderDetailsForBuyer.OrderDetailsForBuyerFragment"
         android:label="@string/order_details_as_buyer_frag"
-        tools:layout="@layout/fragment_order_details_for_buyer" />
+        tools:layout="@layout/fragment_order_details_for_buyer" >
+        <action
+            android:id="@+id/action_orderDetailsForBuyerFragment_to_buyerOrderHistoryFragment"
+            app:destination="@id/buyerOrderHistoryFragment" />
+    </fragment>
     <fragment
         android:id="@+id/orderDetailsForSellerFragment"
         android:name="com.example.farmersecom.features.storeAdmin.presentation.orderDetailsForSeller.OrderDetailsForSellerFragment"
@@ -349,6 +360,9 @@
         <action
             android:id="@+id/action_fullUserProfileFragment_to_changePasswordFragment"
             app:destination="@id/changePasswordFragment" />
+        <action
+            android:id="@+id/action_fullUserProfileFragment_to_changeLanguageFragment"
+            app:destination="@id/changeLanguageFragment" />
     </fragment>
     <fragment
         android:id="@+id/changePasswordFragment"
@@ -448,6 +462,11 @@
             app:popUpToInclusive="true"
             />
     </fragment>
+    <fragment
+        android:id="@+id/changeLanguageFragment"
+        android:name="com.example.farmersecom.features.profile.presentation.changeLanguage.ChangeLanguageFragment"
+        android:label="@string/change_language"
+        tools:layout="@layout/fragment_change_language" />
 
 
 </navigation>
