--- a/app/src/main/res/layout/fragment_store_setting.xml
+++ b/app/src/main/res/layout/fragment_store_setting.xml
@@ -10,6 +10,7 @@
         android:id="@+id/fragmentStoreSettingInfoLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         >
 
         <com.google.android.material.card.MaterialCardView
