--- a/app/src/main/res/layout/fragment_setup_store.xml
+++ b/app/src/main/res/layout/fragment_setup_store.xml
@@ -76,6 +76,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
+        android:visibility="gone"
+        android:textColor="@color/colorRed"
         android:text="@string/code_note"
         android:textSize="12sp"
         android:textStyle="bold" />
