--- a/app/src/main/res/layout/fragment_cart_check_out.xml
+++ b/app/src/main/res/layout/fragment_cart_check_out.xml
@@ -7,224 +7,243 @@
     tools:context=".features.cart.presentation.cartCheckOut.CartCheckOutFragment"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         >
-        <com.google.android.material.textfield.TextInputLayout
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/name"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="16dp"
+            android:orientation="vertical"
             >
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/fragmentCartCheckOutCustomerNameEditText"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:hint="@string/name"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="16dp"
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fragmentCartCheckOutCustomerNameEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/contact_number"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="16dp"
-            app:counterEnabled="true"
-            app:counterMaxLength="11"
-            >
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/fragmentCartCheckOutCustomerContactEditText"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number"
-                android:maxLength="11"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:hint="@string/contact_number"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="16dp"
+                app:counterEnabled="true"
+                app:counterMaxLength="11"
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fragmentCartCheckOutCustomerContactEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:maxLength="11"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
 
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/postal_code"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="16dp"
-            >
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/fragmentCartCheckOutCustomerPostalCodeEditText"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:hint="@string/postal_code"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="16dp"
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fragmentCartCheckOutCustomerPostalCodeEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
 
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/address"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="16dp"
-            >
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/fragmentCartCheckOutCustomerAddressEditText"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:hint="@string/address"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="16dp"
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fragmentCartCheckOutCustomerAddressEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
 
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/select_city"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            >
-            <AutoCompleteTextView
-                android:id="@+id/fragmentCartCheckOutCustomerCityAutoComplete"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:hint="@string/select_city"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="32dp"
+                >
+                <AutoCompleteTextView
+                    android:id="@+id/fragmentCartCheckOutCustomerCityAutoComplete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:columnCount="2"
-            android:rowCount="3"
-            >
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:rowCount="3"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_columnWeight="1"
+                    android:layout_row="0"
+                    android:layout_column="0"
+                    android:text="@string/subtotal"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="16dp"
+                    />
+                <TextView
+                    android:id="@+id/fragmentCartCheckOutSubTotalTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_columnWeight="0"
+                    android:layout_row="0"
+                    android:layout_column="1"
+                    android:text="Subtotal (3 items)"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="16dp"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_columnWeight="1"
+                    android:layout_row="1"
+                    android:layout_column="0"
+                    android:text="@string/shipping_fees"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="16dp"
+                    />
+                <TextView
+
+                    android:id="@+id/fragmentCartCheckOutDeliveryChargesTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_columnWeight="0"
+                    android:layout_row="1"
+                    android:layout_column="1"
+                    android:text="100"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="16dp"
+                    />
+
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_columnWeight="1"
+                    android:layout_row="2"
+                    android:layout_column="0"
+                    android:text="@string/total_rs"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="16dp"
+                    />
+                <TextView
+                    android:id="@+id/fragmentCartCheckOutTotalPriceTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_columnWeight="0"
+                    android:layout_row="2"
+                    android:layout_column="1"
+                    android:text="100"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:textColor="@color/colorRed"
+                    />
+
+
+
+
+
+            </GridLayout>
+
+
+
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:text="@string/subtotal"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
+                android:text="@string/payment_options"
                 android:layout_marginStart="16dp"
                 />
-            <TextView
-                android:id="@+id/fragmentCartCheckOutSubTotalTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="0"
-                android:layout_row="0"
-                android:layout_column="1"
-                android:text="Subtotal (3 items)"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="16dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_row="1"
-                android:layout_column="0"
-                android:text="@string/shipping_fees"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="16dp"
-                />
-            <TextView
-
-                android:id="@+id/fragmentCartCheckOutDeliveryChargesTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="0"
-                android:layout_row="1"
-                android:layout_column="1"
-                android:text="100"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="16dp"
-                />
 
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_row="2"
-                android:layout_column="0"
-                android:text="@string/total_rs"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="16dp"
-                />
-            <TextView
-                android:id="@+id/fragmentCartCheckOutTotalPriceTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="0"
-                android:layout_row="2"
-                android:layout_column="1"
-                android:text="100"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="16dp"
-                android:textColor="@color/colorRed"
-                />
-
-
-
-
-
-        </GridLayout>
-
-
-
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/payment_options"
-            android:layout_marginStart="16dp"
-            />
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Select Payment Method"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            >
-            <AutoCompleteTextView
-                android:id="@+id/fragmentCartCheckOutCustomerPaymentOptionAutoComplete"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:hint="Select Payment Method"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                >
+                <AutoCompleteTextView
+                    android:id="@+id/fragmentCartCheckOutCustomerPaymentOptionAutoComplete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/fragmentCartCheckOutConfirmButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:text="@string/confirm"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:background="@color/colorPrimary"
+                android:layout_marginTop="16dp"
+                />
+        </LinearLayout>
 
         <ProgressBar
             android:layout_width="wrap_content"
@@ -235,20 +254,11 @@
             android:indeterminateTint="@color/colorPrimary"
             android:id="@+id/fragmentCartCheckOutProgressBar"
             android:visibility="gone"
+            android:layout_centerInParent="true"
             />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/fragmentCartCheckOutConfirmButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:text="@string/confirm"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:background="@color/colorPrimary"
-            android:layout_marginTop="16dp"
-            />
-    </LinearLayout>
+
+    </RelativeLayout>
 
 
 
