--- a/app/src/main/res/layout/fragment_full_user_profile.xml
+++ b/app/src/main/res/layout/fragment_full_user_profile.xml
@@ -75,6 +75,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/first_name"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="14sp" />
 
                 <TextView
@@ -85,8 +86,9 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/first_name"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -95,6 +97,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/last_name"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="14sp" />
 
                 <TextView
@@ -105,8 +108,9 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/last_name"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
 
                 <TextView
@@ -116,6 +120,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/gender"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="14sp" />
 
                 <TextView
@@ -126,8 +131,9 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/gender"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
 
                 <TextView
@@ -137,6 +143,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/contact_number"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="14sp" />
 
                 <TextView
@@ -147,8 +154,9 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/contact_number"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -157,6 +165,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/email"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="14sp" />
 
                 <TextView
@@ -167,8 +176,9 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/email"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -177,6 +187,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/dateofbith"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="14sp" />
 
                 <TextView
@@ -187,8 +198,9 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/dateofbith"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
 
                 <TextView
@@ -198,6 +210,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/address"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="14sp" />
 
                 <TextView
@@ -208,7 +221,9 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/address"
-                    android:textSize="18sp" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -217,6 +232,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/city"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="14sp" />
 
                 <TextView
@@ -227,8 +243,9 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/city"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -237,6 +254,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/postal_code"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="14sp" />
 
                 <TextView
@@ -247,8 +265,9 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/postal_code"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -257,7 +276,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/wide_button"
+                    android:drawablePadding="8dp"
+                    android:background="@drawable/small_button_bg"
                     android:drawableLeft="@drawable/ic_baseline_language_24"
                     android:paddingStart="16dp"
                     android:paddingEnd="8dp"
@@ -271,7 +291,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:background="@drawable/wide_button"
+                    android:drawablePadding="8dp"
+                    android:background="@drawable/small_button_bg"
                     android:drawableLeft="@drawable/ic_baseline_edit_24"
                     android:paddingStart="16dp"
                     android:paddingEnd="8dp"
@@ -285,7 +306,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="10dp"
-                    android:background="@drawable/wide_button"
+                    android:drawablePadding="8dp"
+                    android:background="@drawable/small_button_bg"
                     android:drawableLeft="@drawable/ic_baseline_key_24"
                     android:paddingStart="16dp"
                     android:paddingEnd="8dp"
