--- a/app/src/main/res/layout/fragment_post_details.xml
+++ b/app/src/main/res/layout/fragment_post_details.xml
@@ -19,6 +19,8 @@
         android:id="@+id/fragmentPostDetailsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"
         >
 
         <ImageView
@@ -33,42 +35,41 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/fragmentPostDetailsImageView"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16sp"
+            android:layout_marginBottom="8dp"
             android:text="@string/post_title"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:layout_marginStart="16dp"
             android:textStyle="bold" />
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/txtPublishedBy"
-                android:text="@string/published_by"
-                android:layout_below="@id/fragmentPostDetailsTitleTextView"
-                android:textSize="14sp"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="16dp"
-                />
-
         <TextView
+            android:id="@+id/txtPublishedBy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/fragmentPostDetailsPublisherName"
-            android:text="@string/name"
-            android:layout_marginStart="4dp"
             android:layout_below="@id/fragmentPostDetailsTitleTextView"
-            android:textSize="14sp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="16dp"
+            android:text="@string/published_by"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/fragmentPostDetailsPublisherName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragmentPostDetailsTitleTextView"
+            android:layout_marginStart="4dp"
             android:layout_toEndOf="@id/txtPublishedBy"
-            />
+            android:text="@string/name"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/txtPublishDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/fragmentPostDetailsPublisherName"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginStart="16dp"
             android:text="@string/published_on"
             android:textSize="14sp" />
@@ -79,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/txtPublishedBy"
             android:layout_toEndOf="@id/txtPublishDate"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:text="@string/date"
@@ -106,6 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/description_in_detail"
                 android:textSize="16sp" />
