--- a/app/src/main/res/layout/layout_cart_item_view.xml
+++ b/app/src/main/res/layout/layout_cart_item_view.xml
@@ -3,10 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardUseCompatPadding="true"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    app:cardElevation="8dp"
+
+    android:layout_margin="8dp"
+    app:cardElevation="4dp"
     app:cardCornerRadius="4dp"
     >
     <RelativeLayout
@@ -16,7 +15,7 @@
 
         <ImageView
             android:id="@+id/imageViewLayoutCartItemProductImage"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -32,6 +31,7 @@
             android:layout_marginTop="8dp"
             android:layout_toEndOf="@id/imageViewLayoutCartItemProductImage"
             android:text="Product Name"
+            android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -47,7 +47,7 @@
             android:layout_toEndOf="@id/imageViewLayoutCartItemProductImage"
             android:text="@string/rs"
             android:textColor="@color/colorRed"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
         <TextView
@@ -55,12 +55,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewLayoutCartItemProductName"
-            android:layout_toEndOf="@id/textRS"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_toEndOf="@id/textRS"
             android:text="Price"
-            android:textSize="16sp"
-             />
+            android:textColor="@color/colorRed"
+            android:textSize="14sp" />
 
 
         <TextView
@@ -69,68 +69,68 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewLayoutCartItemItemProductPrice"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:layout_toEndOf="@id/imageViewLayoutCartItemProductImage"
-            android:text="@string/unit_in_details"
-            android:textSize="16sp" />
+            android:text="@string/quantity_unit"
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/textViewLayoutCartItemItemUnit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewLayoutCartItemItemProductPrice"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:layout_toEndOf="@id/textUnit"
             android:text="Unit"
-            android:textSize="16sp"
-             />
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
 
         <ImageView
             android:id="@+id/imageViewLayoutCartItemRemoveItem"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:src="@drawable/ic_baseline_remove_24"
-            app:tint="@color/colorRed"
-            />
+            app:tint="@color/colorRed" />
 
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_below="@id/imageViewLayoutCartItemRemoveItem"
+            android:layout_centerInParent="true"
             >
+
             <ImageView
                 android:id="@+id/layoutOrderItemIncreaseQuantityImageView"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_baseline_add_24"
-
-                app:tint="@color/colorPrimary"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_marginTop="8dp"
-                />
+
+                android:src="@drawable/ic_baseline_add_24"
+                app:tint="@color/colorPrimary" />
+
             <TextView
                 android:id="@+id/LayoutCartItemQuantityTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/default_quantity"
-                android:textSize="32sp"
-                />
+                android:textSize="26sp" />
+
             <ImageView
                 android:id="@+id/layoutOrderItemDecreaseQuantityImageView"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_baseline_minus_24"
-
-                app:tint="@color/colorPrimary"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_marginTop="8dp"
-                />
+
+                android:src="@drawable/ic_baseline_minus_24"
+                app:tint="@color/colorPrimary" />
 
         </LinearLayout>
 
