--- a/app/src/main/res/layout/layout_community_post_item.xml
+++ b/app/src/main/res/layout/layout_community_post_item.xml
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/layoutCommunitySectionPostImage"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -24,51 +24,52 @@
             android:layout_marginBottom="8dp"
             android:scaleType="centerCrop"
             android:src="@drawable/image_place_holder" />
+
         <TextView
             android:id="@+id/layoutCommunityPostItemTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/title"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
             android:layout_alignParentStart="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_toStartOf="@id/layoutCommunitySectionPostImage"
-            />
+            android:text="@string/title"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/layoutCommunityPostItemDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/description"
-            android:textSize="16sp"
+            android:layout_below="@id/layoutCommunityPostItemTitle"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            android:layout_toStartOf="@id/layoutCommunitySectionPostImage"
             android:ellipsize="end"
             android:maxLines="3"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@id/layoutCommunitySectionPostImage"
-            android:layout_below="@id/layoutCommunityPostItemTitle"
-           />
+            android:text="@string/description"
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/layoutCommunityPostItemDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/date"
-            android:textSize="16sp"
+            android:layout_below="@id/layoutCommunitySectionPostImage"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_toStartOf="@id/layoutCommunitySectionPostImage"
             android:ellipsize="end"
             android:maxLines="3"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@id/layoutCommunitySectionPostImage"
-            android:layout_below="@id/layoutCommunityPostItemDescription"
-            />
+            android:text="@string/date"
+            android:textSize="12sp" />
 
     </RelativeLayout>
 
