--- a/app/src/main/res/layout/layout_more_item.xml
+++ b/app/src/main/res/layout/layout_more_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:elevation="18dp"
+    android:elevation="4dp"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp">
 
@@ -16,10 +16,12 @@
             android:id="@+id/layoutMoreItemsImageView"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_margin="8dp"
-            android:scaleType="centerCrop"
             android:layout_centerVertical="true"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/image_place_holder" />
 
         <TextView
@@ -31,20 +33,19 @@
             android:layout_toEndOf="@id/layoutMoreItemsImageView"
             android:text="Product Name"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/layoutMoreItemsProductCategoryTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="category"
-            android:layout_toEndOf="@id/layoutMoreItemsImageView"
             android:layout_below="@id/layoutMoreItemsProductNameTextView"
-            android:textColor="@color/black"
-            android:textSize="16sp"
             android:layout_marginStart="8dp"
-            />
+            android:layout_toEndOf="@id/layoutMoreItemsImageView"
+            android:text="category"
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
 
         <TextView
@@ -56,7 +57,7 @@
             android:layout_toEndOf="@id/layoutMoreItemsImageView"
             android:text="@string/rs"
             android:textColor="@color/colorRed"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
 
         <TextView
@@ -68,18 +69,18 @@
             android:layout_toEndOf="@id/textRS"
             android:text="120"
             android:textColor="@color/colorRed"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/layoutMoreItemsProductLocationTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/layoutMoreItemsProductPriceTextView"
-            android:layout_toEndOf="@id/layoutMoreItemsImageView"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
+            android:layout_toEndOf="@id/layoutMoreItemsImageView"
             android:text="@string/location"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
 
 
